# cpp-core

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  NOTICE  README.md  RELEASE-PROCESS.md  mega-test-kenton-home.cfg  mega-test-kenton-work.cfg  mega-test-quick.cfg  release.sh  style-guide.md  super-test.sh
.github/workflows/: quick-test.yml
c++/: .bazelrc  CMakeLists.txt  MODULE.bazel  Makefile.am  Makefile.ekam  README.txt  afl-fuzz.sh  compile_flags.txt  configure.ac  ekam-build.sh  regenerate-bootstraps.sh
c++/cmake/: ZapConfig.cmake.in  ZapMacros.cmake  ZapTargets.cmake
c++/m4/: acx_pthread.m4
c++/pkgconfig/: kj-async.pc.in  kj-gzip.pc.in  kj-http.pc.in  kj-test.pc.in  kj-tls.pc.in  kj.pc.in  zap-json.pc.in  zap-rpc.pc.in  zap-websocket.pc.in  zap.pc.in  zapc.pc.in
c++/samples/: BUILD.bazel  CMakeLists.txt  addressbook.c++  addressbook.zap  calculator-client.c++  calculator-server.c++  calculator.zap  test.sh
c++/src/: CMakeLists.txt
c++/src/benchmark/: carsales.proto  catrank.proto  common.h  eval.proto  null-carsales.c++  null-catrank.c++  null-common.h  null-eval.c++  protobuf-carsales.c++  protobuf-catrank.c++  protobuf-common.h  protobuf-eval.c++  runner.c++  zap-carsales.c++  zap-catrank.c++  zap-common.h  zap-eval.c++
c++/src/kj/: BUILD.bazel  CMakeLists.txt  async-coroutine-alloc-test.c++  async-coroutine-test.c++  async-inl.h  async-io-unix.c++  async-io-win32.c++  async-prelude.h  async-unix-test.c++  async-unix.h  async-win32.c++  async-xthread-test.c++  async.c++  async.h  common-test.c++  common.h  exception.c++  exception.h  filesystem-disk-test.c++  filesystem-disk-win32.c++  mutex-test.c++  source-location.h  timer.c++  windows-sanity.h
c++/src/kj/compat/: BUILD.bazel  http-bench.c++  http-test.c++  http.c++  tls-test.c++  url-test.c++
c++/src/kj/parse/: common.h
c++/src/zap/: BUILD.bazel  CMakeLists.txt  afl-testcase.c++  any-test.c++  any.c++  any.h  arena.c++  arena.h  blob-test.c++  blob.c++  blob.h  bootstrap-test.ekam-rule  c++.zap.c++  c++.zap.h  canonicalize-test.c++  capability-test.c++  capability.c++  capability.h  cc_zap_library.bzl  common-test.c++  common.h  configure.bzl  dynamic-capability.c++  dynamic-test.c++  dynamic.c++  dynamic.h  encoding-test.c++  endian-fallback-test.c++  endian-reverse-test.c++  endian-test.c++  endian.h  fuzz-test.c++  generated-header-support.h  layout-test.c++  layout.c++  layout.h  list.c++  list.h  llvm-fuzzer-testcase.c++  membrane-test.c++  (+65 more)
c++/src/zap/compat/: BUILD.bazel  byte-stream-test.c++  byte-stream.c++  byte-stream.h  byte-stream.zap  http-over-zap-bench.c++  http-over-zap-test.c++  http-over-zap.c++  http-over-zap.h  http-over-zap.zap  json-rpc-test.c++  json-rpc.c++  json-rpc.h  json-rpc.zap  json-test.c++  json-test.zap  json.c++  json.h  json.zap  json.zap.c++  json.zap.h  std-iterator.h  websocket-rpc-test.c++  websocket-rpc.c++  websocket-rpc.h
c++/src/zap/compiler/: compiler.c++  compiler.h  desugar-test.c++  desugar.c++  desugar.h  error-reporter.c++  error-reporter.h  evolution-test.c++  generics.c++  generics.h  grammar.zap  grammar.zap.c++  grammar.zap.h  lexer-test.c++  lexer.c++  lexer.h  lexer.zap  lexer.zap.c++  lexer.zap.h  module-loader.c++  module-loader.h  node-translator.c++  node-translator.h  parser.c++  parser.h  resolver.h  type-id-test.c++  type-id.c++  type-id.h  zap-test.ekam-rule  zap-test.sh  zap.c++  zap.ekam-manifest  zapc-c++.c++  zapc-zap.c++
c++/src/zap/compiler/desugar-fixtures/: sample.brace.zap  sample.ws.zap
c++/src/zap/testdata/: errors.txt  errors.zap.nobuild  errors2.zap.nobuild
doc/: README.md  cxx.md  cxxrpc.md  encoding.md  faq.md  feed.xml  index.md  install.md  language.md  otherlang.md  push-site.sh  roadmap.md  rpc.md  zap-tool.md
doc/_includes/: buttons.html  footer.html  header.html
doc/_layouts/: post.html  slides.html
doc/_plugins/: zap_lexer.py
doc/_posts/: 2013-04-01-announcing-capn-proto.md  2013-06-27-capn-proto-beta-release.md  2013-08-12-zap-0.2-no-more-haskell.md  2013-08-19-zap-0.2.1.md  2013-09-04-zap-0.3-python-tools-features.md  2013-12-12-zap-0.4-time-travel.md  2013-12-13-promise-pipelining-zap-vs-ice.md  2014-03-11-zap-0.4.1-bugfixes.md  2014-06-17-zap-flatbuffers-sbe.md  2014-12-15-zap-0.5-generics-msvc-java-csharp.md  2015-01-23-zap-0.5.1-bugfixes.md  2015-03-02-security-advisory-and-integer-overflow-protection.md  2015-03-05-another-cpu-amplification.md  2017-05-01-zap-0.6-msvc-json-http-more.md  2018-08-28-zap-0.7.md  2020-04-23-zap-0.8.md  2021-08-14-zap-0.9.md  2022-06-03-zap-0.10.md  2022-11-30-CVE-2022-46149-security-advisory.md  2023-07-28-zap-1.0.md
doc/go/zap/: index.html
doc/javascripts/: main.js
doc/news/: index.html
doc/slides-2017.05.18/: index.md
doc/stylesheets/: pygment_trac.css
highlighting/emacs/: README.md  zap-mode.el
highlighting/qtcreator/: zap.xml
kjdoc/: index.md  tour.md
security-advisories/: 2015-03-02-0-c++-integer-overflow.md  2015-03-02-1-c++-integer-underflow.md  2015-03-02-2-all-cpu-amplification.md  2015-03-05-0-c++-addl-cpu-amplification.md  2017-04-17-0-apple-clang-elides-bounds-check.md  2022-11-30-0-pointer-list-bounds.md  2023-11-21-0-websocket-compression-dos.md  README.md
