load("@zap-cpp//src/zap:cc_zap_library.bzl", "cc_zap_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_zap_library(
    name = "addressbook_zap",
    srcs = [
        "addressbook.zap",
    ],
    include_prefix = ".",
)

cc_binary(
    name = "addressbook",
    srcs = ["addressbook.c++"],
    deps = [":addressbook_zap"],
)

cc_zap_library(
    name = "calculator_zap",
    srcs = [
        "calculator.zap",
    ],
    include_prefix = ".",
)

cc_binary(
    name = "calculator-server",
    srcs = ["calculator-server.c++"],
    deps = [
        ":calculator_zap",
        "@zap-cpp//src/zap:zap-rpc",
    ],
)

cc_binary(
    name = "calculator-client",
    srcs = ["calculator-client.c++"],
    deps = [
        ":calculator_zap",
        "@zap-cpp//src/zap:zap-rpc",
    ],
)
